# thresh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TRAINING.md  sonar-project.properties
.github/workflows/: benchmarks.yml  ci.yml  codecov.yml  codeql.yml  release.yml  sonarcloud.yml
crates/thresh/: Cargo.toml
crates/thresh-association/: Cargo.toml
crates/thresh-association/benches/: hungarian.rs  mahalanobis.rs
crates/thresh-association/src/: cost.rs  gating.rs  hungarian.rs  iou.rs  jpda.rs  lib.rs  mht.rs
crates/thresh-bridge/: Cargo.toml
crates/thresh-bridge/src/: convert.rs  detection.rs  error.rs  imm.rs  jpda.rs  lib.rs  mht.rs  phd.rs
crates/thresh-bridge/tests/: stonesoup_integration.rs
crates/thresh-core/: Cargo.toml
crates/thresh-core/src/: coords.rs  detection.rs  eci.rs  geodetic.rs  lib.rs  measurement.rs  othr.rs  sensor.rs  state.rs  time.rs  track.rs  weights.rs
crates/thresh-data/: Cargo.toml
crates/thresh-data/scenarios/: adsb-single-flight.json  adsb-single-flight.toml  adsb-tracon.json  adsb-tracon.toml  nuscenes-mini.toml  orbital-iss.tle  orbital-iss.toml  orbital-starlink-train.tle  orbital-starlink-train.toml  synth-cv-clean.toml  synth-heterogeneous.toml  synth-low-pd.toml  synth-maneuvering.toml
crates/thresh-data/src/: adsb.rs  benchmark.rs  cache.rs  credentials.rs  dataset.rs  frame.rs  lib.rs  mixing.rs  nuscenes.rs  orbital.rs  synthetic.rs
crates/thresh-data/tests/: nuscenes_integration.rs  thresh_data_cli.rs
crates/thresh-eval/: Cargo.toml
crates/thresh-eval/src/: builder.rs  hota.rs  lib.rs  matching.rs  metrics.rs  report.rs
crates/thresh-filter/: Cargo.toml  README.md
crates/thresh-filter/benches/: kalman.rs
crates/thresh-filter/src/: ckf.rs  cov.rs  ekf.rs  imm.rs  kf.rs  lib.rs  models.rs  traits.rs  ukf.rs
crates/thresh-filter/src/models/: ca.rs  coordinated_turn.rs  ctrv.rs  cv.rs
crates/thresh-fusion/: Cargo.toml
crates/thresh-fusion/src/: centralized.rs  covariance_intersection.rs  information.rs  lib.rs  registration.rs  t2t.rs
crates/thresh-inference/: Cargo.toml
crates/thresh-inference/src/: detection.rs  lib.rs  native_detector.rs  pipeline.rs  preprocess.rs  session.rs  weights.rs
crates/thresh-py/: Cargo.toml  pyproject.toml
crates/thresh-py/src/: conversions.rs  errors.rs  eval.rs  filter.rs  lib.rs  scenario.rs  tracker.rs
crates/thresh-synth/: Cargo.toml
crates/thresh-synth/src/: eoir_physics.rs  ionosphere.rs  jsbsim.rs  lib.rs  measurement_gen.rs  multipath.rs  orbital.rs  othr_generator.rs  othr_noise.rs  radar_equation.rs  radar_scene.rs  radar_trajectory.rs  rcs_compute.rs  scenario.rs  swerling.rs  trajectory.rs
crates/thresh-synth/tests/: jsbsim_integration.rs  radar_scene_integration.rs  rcs_compute_integration.rs
crates/thresh-tracker/: Cargo.toml
crates/thresh-tracker/benches/: tracker_step.rs
crates/thresh-tracker/src/: cost_matrix.rs  ecef_tracker.rs  great_circle_tracker.rs  heads.rs  lib.rs  lifecycle.rs  othr_integration.rs  recentered_enu_tracker.rs  stereographic_tracker.rs  streaming.rs  track.rs  tracker.rs  tracker_variant.rs
crates/thresh-tracker/tests/: ecef_tracker_tests.rs  great_circle_tracker_tests.rs  othr_fusion.rs  recentered_enu_tracker_tests.rs  stereographic_tracker_tests.rs  tracker_variant_comparison.rs
crates/thresh-viz/: Cargo.toml
crates/thresh-viz/src/: app.rs  events.rs  geom.rs  lib.rs  main.rs  recording.rs  streaming.rs  theme.rs
crates/thresh-viz/test-data/: sample_recording.json
crates/thresh-viz/tests/: app_kittest.rs  streaming_integration.rs
crates/thresh/src/: lib.rs
crates/thresh/tests/: hifi_integration.rs  integration.rs
docs/reference/: benchmarks.md  profiling.md  transformer-fusion-defense-overview.md  transformer-fusion-engineering-reference.md  transformer-fusion-math-reference.md
openspec/changes/code-maintainability/: design.md  tasks.md
openspec/changes/crates-io-publishing/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/cubature-kalman-filter/: design.md  proposal.md  tasks.md
openspec/changes/flight-data-training-pipeline/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/hifi-sensor-simulation/: proposal.md  tasks.md
openspec/changes/imm-filter/: .openspec.yaml  tasks.md
openspec/changes/imm-pluggable-leaf-filter/: design.md  proposal.md  tasks.md
openspec/changes/jpda-mht-association/: tasks.md
openspec/changes/othr-sensor-model/: design.md  tasks.md
openspec/changes/performance-optimization/: tasks.md
openspec/changes/python-bindings/: design.md  proposal.md  tasks.md
openspec/changes/realtime-streaming/: tasks.md
openspec/changes/rust-native-detector/: design.md  proposal.md  tasks.md
openspec/changes/safetensors-weights/: proposal.md  tasks.md
openspec/changes/scenario-variants/: tasks.md
openspec/changes/test-data-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/track-to-track-fusion/: .openspec.yaml  design.md  tasks.md
openspec/changes/track-visualization/: design.md  proposal.md  tasks.md
openspec/changes/track-visualization-v2/: design.md  tasks.md
openspec/changes/transformer-detection/: tasks.md
openspec/changes/transformer-fusion-tracker/: tasks.md
openspec/specs/adsb-ingest/: spec.md
openspec/specs/cognitive-complexity/: spec.md
openspec/specs/data-association/: spec.md
python/: pyproject.toml
python/acquisition/: __init__.py  adsbx.py  adsbx_poller.py  opensky.py  schema.py  stitching.py  storage.py
python/eval/: __init__.py
python/export/: __init__.py
python/tests/: test_adsbx.py  test_opensky.py  test_schema.py  test_smoke.py  test_stitching.py  test_storage.py
python/training/: __init__.py
scenarios/: adsb-conus.toml  orbital-leo.toml  synth-cv-clean.toml  synth-heterogeneous.toml  synth-low-pd.toml  synth-maneuvering.toml
scripts/: generate_test_model.py  generate_test_weights.py
test-data/models/: test_detector.onnx  test_weights.safetensors
tests/python/: test_filter.py  test_metrics.py  test_tracker.py
(+118 files in other folders)
