[workspace]
resolver = "2"
members = [
    "crates/thresh-core",
    "crates/thresh-filter",
    "crates/thresh-association",
    "crates/thresh-fusion",
    "crates/thresh-inference",
    "crates/thresh-tracker",
    "crates/thresh-bridge",
    "crates/thresh-synth",
    "crates/thresh-eval",
    "crates/thresh",
    "crates/thresh-data",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Chaffgold/thresh"
keywords = ["tracking", "sensor-fusion", "kalman-filter", "radar", "mot"]
categories = ["science", "simulation"]

[workspace.dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ort = "2.0.0-rc.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
csv = "1.3"
sgp4 = "1"
criterion = "0.8"
