[project]
name = "thresh-training"
version = "0.0.0"
description = "Training scripts and data acquisition for the thresh flight-data training pipeline. See ../openspec/changes/flight-data-training-pipeline/."
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.6",
    "requests>=2.31",
    "httpx>=0.27",
]

[project.optional-dependencies]
training = [
    "torch>=2.2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pyright>=1.1.370",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.pyright]
include = ["acquisition", "training", "export", "eval", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = false
# pyarrow's type stubs leave many call results typed as Unknown.
# Accept that pragmatically in user code rather than annotate every
# pyarrow call site. The remaining strict-mode signal is still useful
# for our own code (reportMissingImports, reportCallIssue,
# reportArgumentType for our own functions, etc.).
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownParameterType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
