[package]
name = "thresh-association"
description = "Data association algorithms (Hungarian, Mahalanobis gating)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thresh-core = { path = "../thresh-core" }
nalgebra = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.9"

[[bench]]
name = "hungarian"
harness = false

[[bench]]
name = "mahalanobis"
harness = false
