[package]
name = "thresh-bridge"
description = "PyO3 bridge to Stone Soup for JPDA, MHT, IMM algorithms"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
stonesoup = ["pyo3"]

[dependencies]
thresh-core = { path = "../thresh-core" }
nalgebra = { workspace = true }
pyo3 = { version = "0.24", optional = true }
