[package]
name = "thresh-core"
description = "Common types for the thresh tracking framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
