[package]
name = "thresh-data"
description = "Test data pipeline and dataset adapters for thresh"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
adsb = []
orbital = []
nuscenes = []

[dependencies]
thresh-core = { path = "../thresh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
