[package]
name = "thresh-eval"
description = "MOT evaluation metrics (MOTA, IDF1, HOTA, AMOTA)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-association = { path = "../thresh-association" }
serde = { workspace = true }
serde_json = { workspace = true }
