[package]
name = "thresh-fusion"
description = "Multi-sensor fusion (centralized, information filter, covariance intersection)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-association = { path = "../thresh-association" }
nalgebra = { workspace = true }
