[package]
name = "thresh-inference"
description = "ONNX Runtime integration for transformer inference pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["ort"]

[dependencies]
thresh-core = { path = "../thresh-core" }
nalgebra = { workspace = true }
ort = { workspace = true, optional = true }
