[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "thresh"
dynamic = ["version"]
requires-python = ">=3.9"
description = "Python bindings for the thresh multi-sensor fusion tracking framework"
license = {text = "Apache-2.0"}

[tool.maturin]
features = ["extension-module"]
