[package]
name = "thresh-synth"
description = "Synthetic data generation for radar, EO/IR, and ADS-B sensors"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
jsbsim = ["pyo3"]

[dependencies]
thresh-core = { path = "../thresh-core" }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.9"
rand_distr = "0.5"
pyo3 = { version = "0.24", optional = true }
