[package]
name = "thresh-tracker"
description = "Track management, lifecycle, and class-specific tracking heads"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-filter = { path = "../thresh-filter" }
thresh-association = { path = "../thresh-association" }
thresh-fusion = { path = "../thresh-fusion" }
nalgebra = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
thresh-synth = { path = "../thresh-synth" }
thresh-eval = { path = "../thresh-eval" }
rand = "0.9"
rand_distr = "0.5"
serde_json = { workspace = true }
