[package]
name = "thresh-tracker"
description = "Track management, lifecycle, and class-specific tracking heads"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
parallel = ["rayon"]

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-filter = { path = "../thresh-filter" }
thresh-association = { path = "../thresh-association" }
thresh-fusion = { path = "../thresh-fusion" }
nalgebra = { workspace = true }
serde = { workspace = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
thresh-synth = { path = "../thresh-synth" }
thresh-eval = { path = "../thresh-eval" }
criterion = { workspace = true }
nalgebra = { workspace = true }
rand = "0.9"
rand_distr = "0.5"
serde_json = { workspace = true }

[[bench]]
name = "tracker_step"
harness = false
