[package]
name = "thresh-viz"
description = "Track visualization dashboard for the thresh tracking framework"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
gui = [
    "eframe",
    "egui",
    "egui_plot",
    "image",
    "tokio",
    "thresh-tracker/streaming",
]

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-tracker = { path = "../thresh-tracker" }
thresh-eval = { path = "../thresh-eval" }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# GUI deps are optional — the data layer works without them
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
egui_plot = { version = "0.31", optional = true }
# PNG screenshot export (gui feature)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
# Async runtime for live streaming bridge (gui feature)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }

[dev-dependencies]
tempfile = "3"
# Headless egui app testing — only used by tests that exercise the gui
# feature; no impact on default-feature builds.
egui_kittest = { version = "0.31", features = ["eframe", "x11"] }
