[package]
name = "thresh"
description = "Multi-sensor fusion multi-object tracking framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thresh-core = { path = "../thresh-core" }
thresh-filter = { path = "../thresh-filter" }
thresh-association = { path = "../thresh-association" }
thresh-fusion = { path = "../thresh-fusion" }
thresh-inference = { path = "../thresh-inference" }
thresh-tracker = { path = "../thresh-tracker" }
thresh-synth = { path = "../thresh-synth" }
thresh-eval = { path = "../thresh-eval" }

[features]
default = []
stonesoup = ["thresh-bridge/stonesoup"]

[dependencies.thresh-bridge]
path = "../thresh-bridge"

[dev-dependencies]
nalgebra = { workspace = true }
rand = "0.9"
